--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
             text-align: center;
             font-size: xx-large;
         }
+        h1{
+            margin: 10px;
+            padding: 30px;
+        }
         button{
             background-color: hsl(0, 0%, 50%);
             border: none;
